Fix close button not displaying on mobile

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -49,7 +49,9 @@
 
 
             .portfolio__modal-btn-close {
-                margin: auto;
+                position: absolute;
+                left: 50%; transform: translateX(-50%);
+                z-index: 99999;
             }
         }
     }
